# catface

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  ruff.toml  tox.ini
.github/workflows/: python-app.yml
src/catface/: cli.py
src/catface/template/: cookiecutter.json
src/catface/template/hooks/: post_gen_project.py
src/catface/template/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  .pypirc  Makefile  __main__.py  ruff.toml
tests/: test_cli.py
